// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RadioGroup snapshots > matches snapshot: ControlledExternally 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <span
      class="radio-group-label"
      id="_r_2l_-label"
    >
      Plan
    </span>
    <div
      aria-labelledby="_r_2l_-label"
      class="radio-group"
      id="_r_2l_"
      role="radiogroup"
    >
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2n_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Basic
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2o_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="basic"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2q_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Pro
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2r_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="pro"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2t_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Enterprise
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2u_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="enterprise"
      />
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: Default 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <div
      class="radio-group"
      id="_r_0_"
      role="radiogroup"
    >
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Day
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_3_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="day"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_5_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Week
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_6_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="week"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_8_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Month
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_9_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="month"
      />
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: DisabledItem 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <span
      class="radio-group-label"
      id="_r_1v_-label"
    >
      Plan
    </span>
    <div
      aria-labelledby="_r_1v_-label"
      class="radio-group"
      id="_r_1v_"
      role="radiogroup"
    >
      <span
        aria-checked="true"
        class="radio-group-item"
        data-checked=""
        data-composite-item-active=""
        id="base-ui-_r_21_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-checked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Basic
        </span>
      </span>
      <input
        aria-hidden="true"
        checked=""
        id="base-ui-_r_22_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="basic"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_24_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Pro
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_25_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="pro"
      />
      <span
        aria-checked="false"
        aria-disabled="true"
        class="radio-group-item"
        data-disabled=""
        data-unchecked=""
        id="base-ui-_r_27_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-disabled=""
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Enterprise
        </span>
      </span>
      <input
        aria-hidden="true"
        disabled=""
        id="base-ui-_r_28_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="enterprise"
      />
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: ErrorState 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <span
      class="radio-group-label"
      id="_r_2a_-label"
    >
      Plan
    </span>
    <div
      aria-describedby="_r_2a_-error"
      aria-invalid="true"
      aria-labelledby="_r_2a_-label"
      class="radio-group"
      id="_r_2a_"
      role="radiogroup"
    >
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2c_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Basic
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2d_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="basic"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2f_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Pro
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2g_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="pro"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_2i_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Enterprise
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_2j_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="enterprise"
      />
    </div>
    <p
      class="radio-group-error"
      id="_r_2a_-error"
      role="alert"
    >
      Please choose a plan.
    </p>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: FixedWidth 1`] = `
<div>
  <div
    style="width: 320px;"
  >
    <div
      class="radio-group-container"
    >
      <span
        class="radio-group-label"
        id="_r_u_-label"
      >
        View
      </span>
      <div
        aria-labelledby="_r_u_-label"
        class="radio-group"
        id="_r_u_"
        role="radiogroup"
      >
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_10_"
          role="radio"
          tabindex="0"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Day
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_11_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="day"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_13_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Week
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_14_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="week"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_16_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Month
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_17_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="month"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: FullWidth 1`] = `
<div>
  <div
    style="width: 320px;"
  >
    <div
      class="radio-group-container"
    >
      <span
        class="radio-group-label"
        id="_r_19_-label"
      >
        View
      </span>
      <div
        aria-labelledby="_r_19_-label"
        class="radio-group radio-group--full-width"
        id="_r_19_"
        role="radiogroup"
      >
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1b_"
          role="radio"
          tabindex="0"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Day
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1c_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="day"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1e_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Week
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1f_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="week"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1h_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Month
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1i_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="month"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: LongLabelsTruncated 1`] = `
<div>
  <div
    style="width: 320px;"
  >
    <div
      class="radio-group-container"
    >
      <span
        class="radio-group-label"
        id="_r_1k_-label"
      >
        Notification frequency
      </span>
      <div
        aria-labelledby="_r_1k_-label"
        class="radio-group radio-group--full-width"
        id="_r_1k_"
        role="radiogroup"
      >
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1m_"
          role="radio"
          tabindex="0"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Real-time notifications
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1n_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="realtime"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1p_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Daily digest summary
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1q_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="daily"
        />
        <span
          aria-checked="false"
          class="radio-group-item"
          data-unchecked=""
          id="base-ui-_r_1s_"
          role="radio"
          tabindex="-1"
        >
          <span
            class="radio-group-item-icon"
            data-unchecked=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check size-4 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
          <span
            class="radio-group-item-label"
          >
            Weekly digest summary
          </span>
        </span>
        <input
          aria-hidden="true"
          id="base-ui-_r_1t_"
          style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
          tabindex="-1"
          type="radio"
          value="weekly"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: WithDefaultValue 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <span
      class="radio-group-label"
      id="_r_j_-label"
    >
      View
    </span>
    <div
      aria-labelledby="_r_j_-label"
      class="radio-group"
      id="_r_j_"
      role="radiogroup"
    >
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_l_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Day
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_m_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="day"
      />
      <span
        aria-checked="true"
        class="radio-group-item"
        data-checked=""
        data-composite-item-active=""
        id="base-ui-_r_o_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-checked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Week
        </span>
      </span>
      <input
        aria-hidden="true"
        checked=""
        id="base-ui-_r_p_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="week"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_r_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Month
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_s_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="month"
      />
    </div>
  </div>
</div>
`;

exports[`RadioGroup snapshots > matches snapshot: WithLabel 1`] = `
<div>
  <div
    class="radio-group-container"
  >
    <span
      class="radio-group-label"
      id="_r_b_-label"
    >
      Billing period
    </span>
    <div
      aria-labelledby="_r_b_-label"
      class="radio-group"
      id="_r_b_"
      role="radiogroup"
    >
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_d_"
        role="radio"
        tabindex="0"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Monthly
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_e_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="monthly"
      />
      <span
        aria-checked="false"
        class="radio-group-item"
        data-unchecked=""
        id="base-ui-_r_g_"
        role="radio"
        tabindex="-1"
      >
        <span
          class="radio-group-item-icon"
          data-unchecked=""
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check size-4 shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="radio-group-item-label"
        >
          Yearly
        </span>
      </span>
      <input
        aria-hidden="true"
        id="base-ui-_r_h_"
        style="clip-path: inset(50%); overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; width: 1px; height: 1px; margin: -1px; position: fixed; top: 0px; left: 0px;"
        tabindex="-1"
        type="radio"
        value="yearly"
      />
    </div>
  </div>
</div>
`;
